--- a/vimms/Notebooks/MakeSpectralLibraries.ipynb
+++ b/vimms/Notebooks/MakeSpectralLibraries.ipynb
@@ -9,19 +9,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import sys, os\n",
     "sys.path.append('/Users/simon/git/vimms')\n",
+    "sys.path.insert(0,'/Users/simon/git/mass-spec-utils/')\n",
     "from vimms.Common import save_obj\n",
     "from tqdm import tqdm"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,10 +73,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
+   "outputs": [],
+   "source": [
+    "mb = MassBankLibrary(mb_dir=massbank_data_path, polarity='POSITIVE')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "save_obj(mb, os.path.join(library_cache, 'massbank_pos.p'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -166,27 +195,136 @@
       "Loading records from  /Users/simon/git/MassBank-Data/Osaka_Univ/\n",
       "\t Loaded 449 new records\n"
      ]
-    }
-   ],
-   "source": [
-    "mb = MassBankLibrary(mb_dir=massbank_data_path)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
+    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2020-10-07 11:05:44.333 | INFO     | vimms.Common:save_obj:166 - Saving <class 'mass_spec_utils.library_matching.spec_libraries.MassBankLibrary'> to /Users/simon/clms_er/library_cache/massbank.p\n"
+      "2020-10-07 12:34:05.501 | INFO     | vimms.Common:save_obj:166 - Saving <class 'mass_spec_utils.library_matching.spec_libraries.MassBankLibrary'> to /Users/simon/clms_er/library_cache/massbank_neg.p\n"
      ]
     }
    ],
    "source": [
-    "save_obj(mb, os.path.join(library_cache, 'massbank.p'))"
+    "mb = MassBankLibrary(mb_dir=massbank_data_path, polarity='NEGATIVE')\n",
+    "save_obj(mb, os.path.join(library_cache, 'massbank_neg.p'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading records from  /Users/simon/git/MassBank-Data/Athens_Univ/\n",
+      "\t Loaded 5252 new records\n",
+      "Loading records from  /Users/simon/git/MassBank-Data/MetaboLights/\n",
+      "\t Loaded 58 new records\n",
+      "Loading records from  /Users/simon/git/MassBank-Data/MPI_for_Chemical_Ecology/\n",
+      "\t Loaded 691 new records\n",
+      "Loading records from  /Users/simon/git/MassBank-Data/JEOL_Ltd/\n",
+      "\t Loaded 45 new records\n",
+      "Loading records from  /Users/simon/git/MassBank-Data/GL_Sciences_Inc/\n",
+      "\t Loaded 174 new records\n",
+      "Loading records from  /Users/simon/git/MassBank-Data/Env_Anal_Chem_U_Tuebingen/\n",
+      "\t Loaded 128 new records\n",
+      "Loading records from  /Users/simon/git/MassBank-Data/RIKEN_ReSpect/\n",
+      "\t Loaded 4642 new records\n",
+      "Loading records from  /Users/simon/git/MassBank-Data/Boise_State_Univ/\n",
+      "\t Loaded 4 new records\n",
+      "Loading records from  /Users/simon/git/MassBank-Data/LCSB/\n",
+      "\t Loaded 7299 new records\n",
+      "Loading records from  /Users/simon/git/MassBank-Data/PFOS_research_group/\n",
+      "\t Loaded 413 new records\n",
+      "Loading records from  /Users/simon/git/MassBank-Data/Eawag/\n",
+      "\t Loaded 11191 new records\n",
+      "Loading records from  /Users/simon/git/MassBank-Data/IPB_Halle/\n",
+      "\t Loaded 677 new records\n",
+      "Loading records from  /Users/simon/git/MassBank-Data/Washington_State_Univ/\n",
+      "\t Loaded 2626 new records\n",
+      "Loading records from  /Users/simon/git/MassBank-Data/Univ_Toyama/\n",
+      "\t Loaded 253 new records\n",
+      "Loading records from  /Users/simon/git/MassBank-Data/UOEH/\n",
+      "\t Loaded 35 new records\n",
+      "Loading records from  /Users/simon/git/MassBank-Data/Fukuyama_Univ/\n",
+      "\t Loaded 340 new records\n",
+      "Loading records from  /Users/simon/git/MassBank-Data/Waters/\n",
+      "\t Loaded 2992 new records\n",
+      "Loading records from  /Users/simon/git/MassBank-Data/UPAO/\n",
+      "\t Loaded 12 new records\n",
+      "Loading records from  /Users/simon/git/MassBank-Data/UFZ/\n",
+      "\t Loaded 1261 new records\n",
+      "Loading records from  /Users/simon/git/MassBank-Data/AAFC/\n",
+      "\t Loaded 950 new records\n",
+      "Loading records from  /Users/simon/git/MassBank-Data/Metabolon/\n",
+      "\t Loaded 149 new records\n",
+      "Loading records from  /Users/simon/git/MassBank-Data/RIKEN_NPDepo/\n",
+      "\t Loaded 1956 new records\n",
+      "Loading records from  /Users/simon/git/MassBank-Data/Eawag_Additional_Specs/\n",
+      "\t Loaded 895 new records\n",
+      "Loading records from  /Users/simon/git/MassBank-Data/Nihon_Univ/\n",
+      "\t Loaded 706 new records\n",
+      "Loading records from  /Users/simon/git/MassBank-Data/NAIST/\n",
+      "\t Loaded 621 new records\n",
+      "Loading records from  /Users/simon/git/MassBank-Data/CASMI_2012/\n",
+      "\t Loaded 26 new records\n",
+      "Loading records from  /Users/simon/git/MassBank-Data/HBM4EU/\n",
+      "\t Loaded 1925 new records\n",
+      "Loading records from  /Users/simon/git/MassBank-Data/BGC_Munich/\n",
+      "\t Loaded 903 new records\n",
+      "Loading records from  /Users/simon/git/MassBank-Data/Tottori_Univ/\n",
+      "\t Loaded 16 new records\n",
+      "Loading records from  /Users/simon/git/MassBank-Data/BS/\n",
+      "\t Loaded 1318 new records\n",
+      "Loading records from  /Users/simon/git/MassBank-Data/Chubu_Univ/\n",
+      "\t Loaded 2563 new records\n",
+      "Loading records from  /Users/simon/git/MassBank-Data/MSSJ/\n",
+      "\t Loaded 328 new records\n",
+      "Loading records from  /Users/simon/git/MassBank-Data/ISAS_Dortmund/\n",
+      "\t Loaded 513 new records\n",
+      "Loading records from  /Users/simon/git/MassBank-Data/Kyoto_Univ/\n",
+      "\t Loaded 184 new records\n",
+      "Loading records from  /Users/simon/git/MassBank-Data/Keio_Univ/\n",
+      "\t Loaded 4780 new records\n",
+      "Loading records from  /Users/simon/git/MassBank-Data/RIKEN_IMS/\n",
+      "\t Loaded 1140 new records\n",
+      "Loading records from  /Users/simon/git/MassBank-Data/Literature_Specs/\n",
+      "\t Loaded 39 new records\n",
+      "Loading records from  /Users/simon/git/MassBank-Data/Osaka_MCHRI/\n",
+      "\t Loaded 20 new records\n",
+      "Loading records from  /Users/simon/git/MassBank-Data/KWR/\n",
+      "\t Loaded 207 new records\n",
+      "Loading records from  /Users/simon/git/MassBank-Data/RIKEN/\n",
+      "\t Loaded 11935 new records\n",
+      "Loading records from  /Users/simon/git/MassBank-Data/Fiocruz/\n",
+      "\t Loaded 1107 new records\n",
+      "Loading records from  /Users/simon/git/MassBank-Data/Fac_Eng_Univ_Tokyo/\n",
+      "\t Loaded 12379 new records\n",
+      "Loading records from  /Users/simon/git/MassBank-Data/Univ_Connecticut/\n",
+      "\t Loaded 510 new records\n",
+      "Loading records from  /Users/simon/git/MassBank-Data/NaToxAq/\n",
+      "\t Loaded 3756 new records\n",
+      "Loading records from  /Users/simon/git/MassBank-Data/CASMI_2016/\n",
+      "\t Loaded 622 new records\n",
+      "Loading records from  /Users/simon/git/MassBank-Data/Kazusa/\n",
+      "\t Loaded 273 new records\n",
+      "Loading records from  /Users/simon/git/MassBank-Data/Osaka_Univ/\n",
+      "\t Loaded 449 new records\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2020-10-07 12:39:34.587 | INFO     | vimms.Common:save_obj:166 - Saving <class 'mass_spec_utils.library_matching.spec_libraries.MassBankLibrary'> to /Users/simon/clms_er/library_cache/massbank_all.p\n"
+     ]
+    }
+   ],
+   "source": [
+    "mb = MassBankLibrary(mb_dir=massbank_data_path, polarity='all')\n",
+    "save_obj(mb, os.path.join(library_cache, 'massbank_all.p'))"
    ]
   },
   {
@@ -200,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,17 +350,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 112956/112956 [01:29<00:00, 1255.14it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from mass_spec_utils.library_matching.spectrum import SpectralRecord\n",
     "neg_intensities = []\n",
@@ -253,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,17 +408,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 112955/112955 [01:23<00:00, 1357.90it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "new_records = {}\n",
     "for sid in tqdm(records.keys()):\n",
@@ -304,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,17 +448,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2020-10-07 11:30:04.614 | INFO     | vimms.Common:save_obj:166 - Saving <class 'mass_spec_utils.library_matching.spec_libraries.SpectralLibrary'> to /Users/simon/clms_er/library_cache/gnps.p\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "save_obj(sl, os.path.join(library_cache,'gnps.p'))"
    ]
