--- a/experimental/RL_Env_2.ipynb
+++ b/experimental/RL_Env_2.ipynb
@@ -146,7 +146,7 @@
    "outputs": [],
    "source": [
     "in_dim = 25\n",
-    "out_dim = 25"
+    "out_dim = 10"
    ]
   },
   {
@@ -163,7 +163,7 @@
    "outputs": [],
    "source": [
     "mzml_filename = 'Beer_multibeers_1_fullscan1.mzML'\n",
-    "mz_sampler = MZMLFormulaSampler(mzml_filename)\n",
+    "mz_sampler = MZMLFormulaSampler(mzml_filename, min_mz=min_mz, max_mz=max_mz)\n",
     "ri_sampler = MZMLRTandIntensitySampler(mzml_filename, min_rt=min_rt, max_rt=max_rt,\n",
     "                                       min_log_intensity=min_log_intensity,\n",
     "                                       max_log_intensity=max_log_intensity)"
@@ -266,19 +266,19 @@
     "        # assume 10 action space\n",
     "        # TODO: would be good to have some kind of interface for this??\n",
     "\n",
-    "#         if action < 0:\n",
-    "#             self.seen_actions.update(['N=%d' % self.controller.N])\n",
-    "#             self.seen_actions.update(['min_ms1_intensity=%.1f' % self.controller.min_ms1_intensity])\n",
-    "#         elif 0 <= action < 5:\n",
-    "#             self.controller.N = (action + 1) * 5  # N = {5, 10, 15, 20, 25}\n",
-    "#             self.seen_actions.update(['N=%d' % self.controller.N])\n",
-    "#         elif 5 <= action < 10:\n",
-    "#             self.controller.min_ms1_intensity = (action - 5 + 1) * 5000  # min_ms1_intensity = {50000, 10000, 15000, 20000, 25000}\n",
-    "#             self.seen_actions.update(['min_ms1_intensity=%.1f' % self.controller.min_ms1_intensity])\n",
+    "        if action < 0:\n",
+    "            self.seen_actions.update(['N=%d' % self.controller.N])\n",
+    "            self.seen_actions.update(['DEW=%.1f' % self.controller.rt_tol])\n",
+    "        elif 0 <= action < 5:\n",
+    "            self.controller.N = (action + 1) * 5  # N = {5, 10, 15, 20, 25}\n",
+    "            self.seen_actions.update(['N=%d' % self.controller.N])\n",
+    "        elif 5 <= action < 10:\n",
+    "            self.controller.rt_tol = (action - 5 + 1) * 5  # rt_tol = {5, 10, 15, 20, 25}\n",
+    "            self.seen_actions.update(['DEW=%.1f' % self.controller.rt_tol])\n",
     "\n",
-    "        if action >= 0:\n",
-    "            self.controller.N = action+1\n",
-    "        self.seen_actions.update(['N=%d' % self.controller.N])"
+    "#         if action >= 0:\n",
+    "#             self.controller.N = action+1\n",
+    "#         self.seen_actions.update(['N=%d' % self.controller.N])"
    ]
   },
   {
@@ -310,8 +310,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "env = MaxIntensityEnv(in_dim, out_dim, params)\n",
-    "check_env(env)"
+    "# env = MaxIntensityEnv(in_dim, out_dim, params)\n",
+    "# check_env(env)"
    ]
   },
   {
@@ -320,9 +320,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_name = 'DQN'\n",
-    "model = DQN(\"MlpPolicy\", env, exploration_fraction=0.25, exploration_initial_eps=1.0, exploration_final_eps=0.10, tensorboard_log='./results/%s_MaxIntensityEnv_tensorboard' % model_name)\n",
-    "model.learn(total_timesteps=250000)"
+    "# model_name = 'DQN'\n",
+    "# model = DQN(\"MlpPolicy\", env, exploration_fraction=0.25, exploration_initial_eps=1.0, exploration_final_eps=0.10, tensorboard_log='./results/%s_MaxIntensityEnv_tensorboard' % model_name)\n",
+    "# model.learn(total_timesteps=250000)"
    ]
   },
   {
@@ -331,8 +331,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fname = 'results/%s_maxintensity_smallchems' % model_name\n",
-    "model.save(fname)"
+    "# fname = 'results/%s_maxintensity_smallchems' % model_name\n",
+    "# model.save(fname)"
    ]
   },
   {
@@ -375,7 +375,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "env = SubprocVecEnv([make_env(i) for i in range(num_cpu)]) "
+    "# env = SubprocVecEnv([make_env(i) for i in range(num_cpu)]) "
    ]
   },
   {
@@ -394,9 +394,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_name = 'A2C'\n",
-    "model = A2C(\"MlpPolicy\", env, ent_coef=0.01, tensorboard_log='./results/%s_MaxIntensityEnv_tensorboard' % model_name)\n",
-    "model.learn(total_timesteps=250000)"
+    "# model_name = 'A2C'\n",
+    "# model = A2C(\"MlpPolicy\", env, ent_coef=0.01, tensorboard_log='./results/%s_MaxIntensityEnv_tensorboard' % model_name)\n",
+    "# model.learn(total_timesteps=500000)"
    ]
   },
   {
@@ -405,8 +405,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fname = 'results/%s_maxintensity_smallchems' % model_name\n",
-    "model.save(fname)"
+    "# fname = 'results/%s_maxintensity_smallchems' % model_name\n",
+    "# model.save(fname)"
    ]
   },
   {
@@ -443,7 +443,7 @@
    "source": [
     "model_name = 'PPO'\n",
     "model = PPO(\"MlpPolicy\", env, ent_coef=0.01, tensorboard_log='./results/%s_MaxIntensityEnv_tensorboard' % model_name)\n",
-    "model.learn(total_timesteps=250000)"
+    "model.learn(total_timesteps=500000)"
    ]
   },
   {
@@ -469,7 +469,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# model = DQN.load(fname)"
+    "model_name = 'PPO'\n",
+    "fname = 'results/%s_maxintensity_smallchems' % model_name\n",
+    "model = DQN.load(fname)"
    ]
   },
   {
@@ -478,14 +480,40 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def evaluation(model, model_name, in_dim, out_dim, params, num_episodes):\n",
+    "num_episodes = 200\n",
+    "write_mzml_every = 20"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chems_list = []\n",
+    "for i in range(num_episodes):\n",
+    "    env = MaxIntensityEnv(in_dim, out_dim, params)\n",
+    "    env.reset()\n",
+    "    chems = env.chems\n",
+    "    print(len(chems))\n",
+    "    chems_list.append(chems)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def evaluation(model, model_name, in_dim, out_dim, params, num_episodes, chems_list):\n",
     "    env = MaxIntensityEnv(in_dim, out_dim, params)\n",
     "    total_rewards = []\n",
     "    total_reward_per_chems = []\n",
     "    env_list = []\n",
     "    \n",
     "    for i_episode in range(num_episodes):\n",
-    "        observation = env.reset()\n",
+    "        chems = chems_list[i_episode]\n",
+    "        observation = env.reset(chems=chems)\n",
     "        total_reward = 0\n",
     "        for t in range(1000):\n",
     "            # env.render()\n",
@@ -522,22 +550,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "num_episodes = 200\n",
-    "write_mzml_every = 10"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "model_total_rewards, model_reward_per_chems, model_env_list = evaluation(model, model_name, in_dim, out_dim, params, num_episodes)"
+    "model_total_rewards, model_reward_per_chems, model_env_list = evaluation(model, model_name, in_dim, out_dim, params, num_episodes, chems_list)"
    ]
   },
   {
@@ -546,7 +564,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "random_total_rewards, random_reward_per_chems, random_env_list = evaluation(None, 'random', in_dim, out_dim, params, num_episodes)"
+    "random_total_rewards, random_reward_per_chems, random_env_list = evaluation(None, 'random', in_dim, out_dim, params, num_episodes, chems_list)"
    ]
   },
   {
@@ -555,7 +573,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "topN_total_rewards, topN_reward_per_chems, topN_env_list = evaluation(None, 'TopN', in_dim, out_dim, params, num_episodes)"
+    "topN_total_rewards, topN_reward_per_chems, topN_env_list = evaluation(None, 'TopN', in_dim, out_dim, params, num_episodes, chems_list)"
    ]
   },
   {
@@ -598,7 +616,9 @@
     "\n",
     "def get_score(env):\n",
     "    res = evaluate_simulated_env(env)\n",
-    "    score = res['coverage_proportion'] * res['intensity_proportion']\n",
+    "#     score = res['coverage_proportion'] * res['intensity_proportion']\n",
+    "#     score = res['coverage_proportion']    \n",
+    "    score = res['intensity_proportion']    \n",
     "    return score"
    ]
   },
