--- a/experimental/RL_MaxIntensity_PPO.ipynb
+++ b/experimental/RL_MaxIntensity_PPO.ipynb
@@ -53,7 +53,8 @@
     "from vimms.Common import *\n",
     "from vimms.Gym import VimmsGymEnv\n",
     "from vimms.Evaluation import evaluate_simulated_env, evaluate_multiple_simulated_env\n",
-    "from vimms.ChemicalSamplers import MZMLFormulaSampler, MZMLRTandIntensitySampler"
+    "from vimms.ChemicalSamplers import MZMLFormulaSampler, MZMLRTandIntensitySampler\n",
+    "from vimms.Controller import SimpleTargetController"
    ]
   },
   {
@@ -235,7 +236,11 @@
     "        \"\"\"\n",
     "        Defines observation space\n",
     "        \"\"\"\n",
-    "        return spaces.Box(low=0.0, high=np.inf, shape=(self.in_dim * 2,))\n",
+    "        features = {\n",
+    "            'intensity': spaces.Box(low=0.0, high=np.inf, shape=(self.in_dim,)),\n",
+    "            'exclusion': spaces.Box(low=0.0, high=1.0, shape=(self.in_dim,))\n",
+    "        }\n",
+    "        return spaces.Dict(features)\n",
     "    \n",
     "    def _get_state(self, scan_to_process):\n",
     "        \"\"\"\n",
@@ -272,7 +277,10 @@
     "            \n",
     "        feature_intensity = np.array(feature_intensity)\n",
     "        feature_exclusion = np.array(feature_exclusion)\n",
-    "        features = np.concatenate([feature_intensity, feature_exclusion])\n",
+    "        features = {\n",
+    "            'intensity': feature_intensity,\n",
+    "            'exclusion': feature_exclusion\n",
+    "        }\n",
     "        return features\n",
     "    \n",
     "    def _compute_reward(self, scan_to_process, results):\n",
@@ -284,30 +292,25 @@
     "    \n",
     "        total_reward = 0.0\n",
     "        for last_scan in results:\n",
-    "            if last_scan.ms_level >= 2:\n",
-    "                \n",
+    "            if last_scan.ms_level >= 2:                \n",
     "                precursor = last_scan.scan_params.get(ScanParameters.PRECURSOR_MZ)[0]\n",
     "                mz = precursor.precursor_mz\n",
     "                frag_rt = last_scan.scan_params.get(ScanParameters.METADATA)['frag_at']\n",
     "                intensity = precursor.precursor_intensity\n",
-    "                event = last_scan.fragevent\n",
-    "                if event is not None:  # fragmenting chems\n",
-    "                    frag_intensity = event.parents_intensity[0]\n",
-    "                    chem = event.chem\n",
-    "                    if chem in self.seen_chems:\n",
-    "                        self.seen_chems[chem] += 1\n",
-    "                    else:\n",
-    "                        self.seen_chems[chem] = 1\n",
-    "\n",
-    "                    reward = 0\n",
-    "                    if frag_intensity is not None:\n",
-    "                        time_filter = -1 if (mz, frag_rt, intensity, ) in self.last_excluded else 1\n",
-    "                        reward = np.log(frag_intensity) * time_filter\n",
-    "\n",
-    "                else:  # fragmenting noise\n",
-    "                    reward = - np.log(intensity) # TODO: not the correct intensity?\n",
-    "\n",
+    "                \n",
+    "                # intensity reward\n",
+    "                min_intensity = self.controller.min_ms1_intensity\n",
+    "                reward = np.log(intensity) - np.log(min_ms1_intensity)\n",
+    "                \n",
+    "                # time reward\n",
+    "                time_filter = -1 if (mz, frag_rt, intensity, ) in self.last_excluded else 1\n",
+    "                reward = reward * time_filter\n",
+    "                \n",
     "                total_reward += reward\n",
+    "        \n",
+    "        # use fewer fragmentations\n",
+    "        if len(results) > 0:\n",
+    "            total_reward /= len(results)\n",
     "        return total_reward    \n",
     "\n",
     "    def _take_action(self, action):\n",
@@ -321,133 +324,24 @@
     "        for i in range(len(target_flag)):\n",
     "            t = target_flag[i]\n",
     "            if t == 1:\n",
-    "                mz, intensity, exclusion = self.selected_precursors[i]\n",
+    "                mz, intensity, excluded = self.selected_precursors[i]\n",
     "                targets.append((mz, intensity))\n",
     "                \n",
     "        # self.seen_actions.update(['targets=%s' % targets])\n",
-    "        self.controller.targets = targets"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# class MaxIntensityEnv(VimmsGymEnv):\n",
-    "#     def __init__(self, in_dim, out_dim, params):\n",
-    "#         super().__init__(in_dim, out_dim, params)  \n",
-    "#         self.last_excluded = []\n",
-    "#         self.selected_precursors = []\n",
-    "    \n",
-    "#     def _get_action_space(self):\n",
-    "#         \"\"\"\n",
-    "#         Defines action space\n",
-    "#         \"\"\"\n",
-    "#         return spaces.MultiBinary(self.out_dim)\n",
-    "\n",
-    "#     def _get_observation_space(self):\n",
-    "#         \"\"\"\n",
-    "#         Defines observation space\n",
-    "#         \"\"\"\n",
-    "#         features = {\n",
-    "#             'intensity': spaces.Box(low=0.0, high=np.inf, shape=(self.in_dim,)),\n",
-    "#             'exclusion': spaces.Box(low=0.0, high=1.0, shape=(self.in_dim,))\n",
-    "#         }\n",
-    "#         return spaces.Dict(features)\n",
-    "    \n",
-    "#     def _get_state(self, scan_to_process):\n",
-    "#         \"\"\"\n",
-    "#         Converts a scan to a state\n",
-    "#         \"\"\"\n",
-    "#         self.last_scan_to_process = scan_to_process        \n",
-    "#         mzs, rt, intensities = self._get_mzs_rt_intensities(scan_to_process)\n",
+    "        self.controller.targets = targets\n",
     "        \n",
-    "#         precursors = []\n",
-    "#         self.last_excluded = []\n",
-    "#         for mz, intensity in zip(mzs, intensities):\n",
-    "#             if self.controller.exclusion.is_excluded(mz, rt):\n",
-    "#                 excluded = 1\n",
-    "#                 self.last_excluded.append((mz, rt, intensity, ))                \n",
-    "#             else:\n",
-    "#                 excluded = 0\n",
-    "#             precursor = (mz, intensity, excluded, )\n",
-    "#             precursors.append(precursor)                \n",
-    "        \n",
-    "#         sorted_precursors = sorted(precursors, key=lambda item: item[1], reverse=True) # sort by intensity descending\n",
-    "#         self.selected_precursors = []        \n",
-    "#         feature_intensity = []\n",
-    "#         feature_exclusion = []\n",
-    "#         for i in range(self.in_dim): # get the first in_dim items\n",
-    "#             precursor = sorted_precursors[i]\n",
-    "#             mz, intensity, excluded = precursor            \n",
-    "#             self.selected_precursors.append(precursor)\n",
-    "            \n",
-    "#             intensity = np.log(intensity)\n",
-    "#             if np.isnan(intensity):\n",
-    "#                 intensity = 0\n",
-    "#             feature_intensity.append(intensity)\n",
-    "#             feature_exclusion.append(excluded)\n",
-    "            \n",
-    "#         feature_intensity = np.array(feature_intensity)\n",
-    "#         feature_exclusion = np.array(feature_exclusion)\n",
-    "#         features = {\n",
-    "#             'intensity': feature_intensity,\n",
-    "#             'exclusion': feature_exclusion\n",
-    "#         }\n",
-    "#         return features\n",
-    "    \n",
-    "#     def _compute_reward(self, scan_to_process, results):\n",
-    "#         \"\"\"\n",
-    "#         Computes fragmentation reward\n",
-    "#         \"\"\"\n",
-    "#         parent_scan_id = self.controller.last_ms1_scan.scan_id\n",
-    "#         assert scan_to_process.scan_id == parent_scan_id\n",
-    "    \n",
-    "#         total_reward = 0.0\n",
-    "#         for last_scan in results:\n",
-    "#             if last_scan.ms_level >= 2:\n",
-    "                \n",
-    "#                 precursor = last_scan.scan_params.get(ScanParameters.PRECURSOR_MZ)[0]\n",
-    "#                 mz = precursor.precursor_mz\n",
-    "#                 frag_rt = last_scan.scan_params.get(ScanParameters.METADATA)['frag_at']\n",
-    "#                 intensity = precursor.precursor_intensity\n",
-    "#                 event = last_scan.fragevent\n",
-    "#                 if event is not None:  # fragmenting chems\n",
-    "#                     frag_intensity = event.parents_intensity[0]\n",
-    "#                     chem = event.chem\n",
-    "#                     if chem in self.seen_chems:\n",
-    "#                         self.seen_chems[chem] += 1\n",
-    "#                     else:\n",
-    "#                         self.seen_chems[chem] = 1\n",
-    "\n",
-    "#                     reward = 0\n",
-    "#                     if frag_intensity is not None:\n",
-    "#                         time_filter = -1 if (mz, frag_rt, intensity, ) in self.last_excluded else 1\n",
-    "#                         reward = np.log(frag_intensity) * time_filter\n",
-    "\n",
-    "#                 else:  # fragmenting noise\n",
-    "#                     reward = - np.log(intensity) # TODO: not the correct intensity?\n",
-    "\n",
-    "#                 total_reward += reward\n",
-    "#         return total_reward    \n",
-    "\n",
-    "#     def _take_action(self, action):\n",
-    "#         \"\"\"\n",
-    "#         Modify controller variables based on the selected action\n",
-    "#         \"\"\"\n",
-    "#         target_flag = action      \n",
-    "#         assert len(target_flag) == len(self.selected_precursors)\n",
-    "        \n",
-    "#         targets = []\n",
-    "#         for i in range(len(target_flag)):\n",
-    "#             t = target_flag[i]\n",
-    "#             if t == 1:\n",
-    "#                 mz, intensity, excluded = self.selected_precursors[i]\n",
-    "#                 targets.append((mz, intensity))\n",
-    "                \n",
-    "#         # self.seen_actions.update(['targets=%s' % targets])\n",
-    "#         self.controller.targets = targets"
+    "    def _reset_controller(self, env_params):\n",
+    "        \"\"\"\n",
+    "        Generates new controller\n",
+    "        \"\"\"\n",
+    "        ionisation_mode = env_params['ionisation_mode']\n",
+    "        N = env_params['N']\n",
+    "        isolation_window = env_params['isolation_window']\n",
+    "        mz_tol = env_params['mz_tol']\n",
+    "        rt_tol = env_params['rt_tol']\n",
+    "        min_ms1_intensity = env_params['min_ms1_intensity']\n",
+    "        controller = SimpleTargetController(ionisation_mode, N, isolation_window, mz_tol, rt_tol, min_ms1_intensity)\n",
+    "        return controller"
    ]
   },
   {
@@ -470,7 +364,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### DQN"
+    "### PPO"
    ]
   },
   {
@@ -484,14 +378,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# model_name = 'DQN'\n",
-    "# model = DQN(\"MlpPolicy\", env, exploration_fraction=0.25, exploration_initial_eps=1.0, exploration_final_eps=0.10, tensorboard_log='./results/%s_MaxIntensityEnv_tensorboard' % model_name)\n",
-    "# model.learn(total_timesteps=25000)"
+    "#### Multiprocessing"
    ]
   },
   {
@@ -525,14 +415,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Training"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "model_name = 'PPO'\n",
-    "model = PPO(\"MlpPolicy\", env, verbose=1, ent_coef=0.01, tensorboard_log='./results/%s_MaxIntensityEnv_tensorboard' % model_name)\n",
-    "model.learn(total_timesteps=250000)"
+    "model = PPO(\"MultiInputPolicy\", env, verbose=1, ent_coef=0.01, tensorboard_log='./results/%s_MaxIntensityEnv_tensorboard' % model_name)\n",
+    "model.learn(total_timesteps=1000000)"
    ]
   },
   {
@@ -550,17 +447,6 @@
    "metadata": {},
    "source": [
     "# 4. Evaluation"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# model_name = 'DQN'\n",
-    "# fname = 'results/%s_maxintensity_smallchems' % model_name\n",
-    "# model = DQN.load(fname)"
    ]
   },
   {
@@ -626,10 +512,8 @@
     "                total_reward_per_chems.append(reward_per_chems)\n",
     "                env_list.append(env.vimms_env)\n",
     "                if i_episode % write_mzml_every == 0 or i_episode == num_episodes-1:\n",
-    "                    print('Episode %d timesteps %d reward %f n_chems %d reward/chems %f actions %s' % (i_episode, t+1, total_reward, n_chems, reward_per_chems, seen_actions))                    \n",
     "                    env.vimms_env.write_mzML('results', out_file)\n",
-    "                else:\n",
-    "                    print('Episode %d timesteps %d reward %f n_chems %d reward/chems %f' % (i_episode, t+1, total_reward, n_chems, reward_per_chems))                                        \n",
+    "                print('Episode %d timesteps %d reward %f n_chems %d reward/chems %f' % (i_episode, t+1, total_reward, n_chems, reward_per_chems))                                        \n",
     "                break\n",
     "    env.close()\n",
     "    print('Average total reward = %f' % np.mean(total_rewards))\n",
@@ -753,20 +637,6 @@
    "source": [
     "plot_diff([model_name, 'Random'], [model_scores, random_scores], 'TopN', topN_scores)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
