--- a/experimental/RL_MaxIntensity_PPO.ipynb
+++ b/experimental/RL_MaxIntensity_PPO.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -15,7 +17,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "import sys\n",
@@ -27,7 +31,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -47,7 +53,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "from vimms.Common import *\n",
@@ -60,7 +68,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "np.random.seed(0)\n",
@@ -78,7 +88,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "set_log_level_warning()"
@@ -87,7 +99,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# n_chemicals = (200, 500)\n",
@@ -99,7 +113,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# n_chemicals = (500, 2000)\n",
@@ -111,7 +127,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "n_chemicals = (200, 500)\n",
@@ -124,7 +142,8 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": true,
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -139,7 +158,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "isolation_window = 0.7\n",
@@ -155,7 +176,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "in_dim = 50\n",
@@ -172,7 +195,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "mzml_filename = 'Beer_multibeers_1_fullscan1.mzML'\n",
@@ -185,7 +210,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "params = {\n",
@@ -217,7 +244,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "class MaxIntensityEnv(VimmsGymEnv):\n",
@@ -236,8 +265,9 @@
     "        \"\"\"\n",
     "        Defines observation space\n",
     "        \"\"\"\n",
+    "        intensity_high = np.log(intensity_range[1]) + 10\n",
     "        features = {\n",
-    "            'intensity': spaces.Box(low=0.0, high=np.inf, shape=(self.in_dim,)),\n",
+    "            'intensity': spaces.Box(low=0.0, high=intensity_high, shape=(self.in_dim,)),\n",
     "            'exclusion': spaces.Box(low=0.0, high=1.0, shape=(self.in_dim,))\n",
     "        }\n",
     "        return spaces.Dict(features)\n",
@@ -253,10 +283,10 @@
     "        self.last_excluded = []\n",
     "        for mz, intensity in zip(mzs, intensities):\n",
     "            if self.controller.exclusion.is_excluded(mz, rt):\n",
-    "                excluded = 1\n",
+    "                excluded = 0\n",
     "                self.last_excluded.append((mz, rt, intensity, ))                \n",
     "            else:\n",
-    "                excluded = 0\n",
+    "                excluded = 1\n",
     "            precursor = (mz, intensity, excluded, )\n",
     "            precursors.append(precursor)                \n",
     "        \n",
@@ -347,7 +377,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "set_log_level_info()"
@@ -400,7 +432,6 @@
     "    set_random_seed(seed)\n",
     "    return _init\n",
     "\n",
-    "# num_cpu = int(multiprocessing.cpu_count() / 2)\n",
     "num_cpu = multiprocessing.cpu_count()\n",
     "num_cpu"
    ]
@@ -424,12 +455,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "model_name = 'PPO'\n",
-    "model = PPO(\"MultiInputPolicy\", env, verbose=1, ent_coef=0.01, tensorboard_log='./results/%s_MaxIntensityEnv_tensorboard' % model_name)\n",
-    "model.learn(total_timesteps=1000000)"
+    "model = PPO(\"MultiInputPolicy\", env, verbose=1, tensorboard_log='./results/%s_MaxIntensityEnv_tensorboard' % model_name)\n",
+    "model.learn(total_timesteps=250000)"
    ]
   },
   {
@@ -450,19 +483,49 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "num_episodes = 100\n",
-    "write_mzml_every = 10"
+    "Load previously trained model"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_name = 'PPO'\n",
+    "fname = 'results/%s_maxintensity_smallchems' % model_name\n",
+    "model = PPO.load(fname)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "num_episodes = 20\n",
+    "write_mzml_every = 5\n",
+    "N = 10"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Generate some evaluation chemicals"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "chems_list = []\n",
@@ -475,9 +538,82 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Do a few topN steps manually"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "def topN(observation, N=10, min_ms1_intensity=5000):\n",
+    "    intensities = observation['intensity']\n",
+    "    exclusions = observation['exclusion']\n",
+    "    log_min_ms1_intensity = np.log(min_ms1_intensity)\n",
+    "    \n",
+    "    action = []\n",
+    "    count = 0\n",
+    "    for i in range(len(intensities)):\n",
+    "        intensity, exclusion = intensities[i], exclusions[i]\n",
+    "        if count < N:\n",
+    "            if exclusion == 1 and intensity > log_min_ms1_intensity:\n",
+    "                action.append(1)\n",
+    "                count += 1\n",
+    "            else:\n",
+    "                action.append(0)\n",
+    "        else:\n",
+    "            action.append(0)\n",
+    "    action = np.array(action)\n",
+    "    return action"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "env = MaxIntensityEnv(in_dim, out_dim, params)\n",
+    "chems = chems_list[0]\n",
+    "observation = env.reset(chems=chems)\n",
+    "observation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(10):\n",
+    "    action = topN(observation, N=N, min_ms1_intensity=min_ms1_intensity)\n",
+    "    observation, reward, done, info = env.step(action)\n",
+    "    action, reward, observation, done\n",
+    "    print('step %d' % i)\n",
+    "    print('action = %s' % action)\n",
+    "    print('reward = %f' % reward)\n",
+    "    print('done = %s' % done)    \n",
+    "    print('next observation = %s' % observation)\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Compute evaluation here"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "def evaluation(model, model_name, in_dim, out_dim, params, num_episodes, chems_list):\n",
@@ -496,10 +632,10 @@
     "                action = env.action_space.sample()\n",
     "                out_file = 'test_%s_%d.mzML' % ('random', i_episode)\n",
     "            elif model_name == 'TopN':\n",
-    "                action = env.action_space.sample() # TODO: not correct\n",
+    "                action = topN(observation, N=N, min_ms1_intensity=min_ms1_intensity)\n",
     "                out_file = 'test_%s_%d.mzML' % ('TopN', i_episode)                \n",
     "            else:\n",
-    "                action, _ = model.predict(observation, deterministic=False)     \n",
+    "                action, _ = model.predict(observation, deterministic=True)     \n",
     "                out_file = 'test_%s_%d.mzML' % (model_name, i_episode)\n",
     "                                                \n",
     "            observation, reward, done, info = env.step(action)\n",
@@ -534,19 +670,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "random_total_rewards, random_reward_per_chems, random_env_list = evaluation(None, 'random', in_dim, out_dim, params, num_episodes, chems_list)"
+    "topN_total_rewards, topN_reward_per_chems, topN_env_list = evaluation(None, 'TopN', in_dim, out_dim, params, num_episodes, chems_list)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "topN_total_rewards, topN_reward_per_chems, topN_env_list = evaluation(None, 'TopN', in_dim, out_dim, params, num_episodes, chems_list)"
+    "random_total_rewards, random_reward_per_chems, random_env_list = evaluation(None, 'random', in_dim, out_dim, params, num_episodes, chems_list)"
    ]
   },
   {
@@ -559,7 +699,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "def plot_diff(controller_names, scores_list, ref_name, ref_scores):\n",
@@ -601,7 +743,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "plot_arr([model_name, 'TopN', 'Random'], [model_total_rewards, topN_total_rewards, random_total_rewards], 'Total Rewards')"
@@ -610,7 +754,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "plot_arr([model_name, 'TopN', 'Random'], [model_reward_per_chems, topN_reward_per_chems, random_reward_per_chems], 'Reward/Chems')"
@@ -619,14 +765,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "score_type = 'both'\n",
+    "score_type = 'coverage'\n",
     "model_scores = get_scores(model_env_list, type=score_type)\n",
     "topN_scores = get_scores(topN_env_list, type=score_type)\n",
     "random_scores = get_scores(random_env_list, type=score_type)\n",
-    "plot_arr([model_name, 'TopN', 'Random'], [model_scores, topN_scores, random_scores], 'Scores (coverage * intensity)')"
+    "plot_arr([model_name, 'TopN', 'Random'], [model_scores, topN_scores, random_scores], 'Scores (coverage)')"
    ]
   },
   {
@@ -635,8 +783,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_diff([model_name, 'Random'], [model_scores, random_scores], 'TopN', topN_scores)"
+    "score_type = 'intensity'\n",
+    "model_scores = get_scores(model_env_list, type=score_type)\n",
+    "topN_scores = get_scores(topN_env_list, type=score_type)\n",
+    "random_scores = get_scores(random_env_list, type=score_type)\n",
+    "plot_arr([model_name, 'TopN', 'Random'], [model_scores, topN_scores, random_scores], 'Scores (intensity)')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
