--- a/demo/02. Methods/02. Top N.ipynb
+++ b/demo/02. Methods/02. Top N.ipynb
@@ -78,8 +78,7 @@
    "outputs": [],
    "source": [
     "data_dir = os.path.abspath(os.path.join(os.getcwd(),'..','..','tests','fixtures'))\n",
-    "dataset = load_obj(os.path.join(data_dir, 'QCB_22May19_1.p'))\n",
-    "ps = load_obj(Path(data_dir,'peak_sampler_mz_rt_int_beerqcb_fragmentation.p'))"
+    "dataset = load_obj(os.path.join(data_dir, 'QCB_22May19_1.p'))"
    ]
   },
   {
@@ -119,7 +118,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mass_spec = IndependentMassSpectrometer(POSITIVE, dataset, ps)\n",
+    "mass_spec = IndependentMassSpectrometer(POSITIVE, dataset)\n",
     "controller = TopNController(POSITIVE, N, isolation_window, mz_tol, rt_tol, min_ms1_intensity)"
    ]
   },
@@ -177,7 +176,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "### Run Top-N Controller with varied N and RT tolerance (DEW)"
    ]
@@ -272,7 +273,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -286,7 +287,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.8"
   }
  },
  "nbformat": 4,
