--- a/demo/02. Methods/04. WeightedDEW.ipynb
+++ b/demo/02. Methods/04. WeightedDEW.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 4. SmartROI"
+    "# 7. WeightedDEW"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This notebook shows how to run the SmartROI method on a ViMMS dataset"
+    "This notebook shows how to run the WeightedDEW method on a ViMMS dataset"
    ]
   },
   {
@@ -59,7 +59,7 @@
    "outputs": [],
    "source": [
     "from vimms.MassSpec import IndependentMassSpectrometer\n",
-    "from vimms.Controller import TopN_SmartRoiController\n",
+    "from vimms.Controller import WeightedDEWController\n",
     "from vimms.Environment import Environment\n",
     "from vimms.Common import *"
    ]
@@ -78,15 +78,14 @@
    "outputs": [],
    "source": [
     "data_dir = os.path.abspath(os.path.join(os.getcwd(),'..','..','tests','fixtures'))\n",
-    "dataset = load_obj(os.path.join(data_dir, 'QCB_22May19_1.p'))\n",
-    "ps = load_obj(Path(data_dir,'peak_sampler_mz_rt_int_beerqcb_fragmentation.p'))"
+    "dataset = load_obj(os.path.join(data_dir, 'QCB_22May19_1.p'))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Run Controller"
+    "### Run Top N Controller"
    ]
   },
   {
@@ -106,19 +105,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ionisation_mode = POSITIVE\n",
-    "isolation_window = 1\n",
-    "N = 10\n",
-    "rt_tol = 15\n",
-    "mz_tol = 10\n",
     "min_ms1_intensity = 5000\n",
+    "mz_tol = 10\n",
+    "r = 20\n",
+    "N = 10\n",
+    "t0 = 20\n",
     "\n",
-    "min_roi_intensity = 500\n",
-    "min_roi_length = 3\n",
-    "min_roi_length_for_fragmentation = 3\n",
-    "\n",
-    "reset_length_seconds=100\n",
-    "intensity_increase_factor=2"
+    "isolation_width = 1\n"
    ]
   },
   {
@@ -127,10 +120,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mass_spec = IndependentMassSpectrometer(POSITIVE, dataset, ps)\n",
-    "controller = TopN_SmartRoiController(ionisation_mode, isolation_window, mz_tol, min_ms1_intensity, min_roi_intensity, \n",
-    "                                min_roi_length, N, rt_tol, min_roi_length_for_fragmentation, reset_length_seconds,\n",
-    "                               intensity_increase_factor)"
+    "mass_spec = IndependentMassSpectrometer(POSITIVE, dataset)\n",
+    "controller = WeightedDEWController(POSITIVE, N, isolation_width, mz_tol, \n",
+    "                                            r,min_ms1_intensity, exclusion_t_0 = t0, log_intensity = True)"
    ]
   },
   {
@@ -142,7 +134,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "(1440.200s) ms_level=1 N=10 DEW=15: 100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████▉| 1439.8000000001155/1440 [00:38<00:00, 37.31it/s]\n"
+      "(1440.000s) ms_level=1: 100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████████▉| 1439.6000000000533/1440 [00:04<00:00, 328.50it/s]\n"
      ]
     }
    ],
@@ -173,14 +165,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2020-09-03 15:46:00.720 | DEBUG    | vimms.Environment:write_mzML:161 - Writing mzML file to C:\\Users\\Vinny\\work\\vimms\\demo\\02. Methods\\results\\smartroi_controller.mzML\n",
-      "2020-09-03 15:46:15.402 | DEBUG    | vimms.Environment:write_mzML:164 - mzML file successfully written!\n"
+      "2021-08-28 00:01:25.967 | DEBUG    | vimms.Environment:write_mzML:148 - Writing mzML file to C:\\Users\\joewa\\Work\\git\\vimms\\demo\\02. Methods\\results\\weighteddew_controller.mzML\n",
+      "2021-08-28 00:01:26.436 | DEBUG    | vimms.Environment:write_mzML:151 - mzML file successfully written!\n"
      ]
     }
    ],
    "source": [
     "set_log_level_debug()\n",
-    "mzml_filename = 'smartroi_controller.mzML'\n",
+    "mzml_filename = 'weighteddew_controller.mzML'\n",
     "out_dir = os.path.join(os.getcwd(), 'results')\n",
     "env.write_mzML(out_dir, mzml_filename)"
    ]
@@ -188,7 +180,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -202,7 +194,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.8"
   }
  },
  "nbformat": 4,
